--- a/index.html
+++ b/index.html
@@ -16,14 +16,12 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/synapticloop/sab-spot-comment">View on GitHub</a>
 
           <h1 id="project_title">sab-spot-comment</h1>
           <h2 id="project_tagline">SabNZBD/Newznab/SpotNAB auto commenter</h2>
 
             <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/synapticloop/sab-spot-comment/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/synapticloop/sab-spot-comment/tarball/master">Download this project as a tar.gz file</a>
+              <a class="jar_download_link" href="https://github.com/synapticloop/sab-spot-comment/raw/master/dist/sab-spot-comment.jar">Download this project as a .jar file</a>
             </section>
         </header>
     </div>
