--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <h2 id="project_tagline">SabNZBD/Newznab/SpotNAB auto commenter</h2>
 
             <section id="downloads">
-              <a class="jar_download_link" href="https://github.com/synapticloop/sab-spot-comment/raw/master/dist/sab-spot-comment.jar">Download this project as a .jar file</a>
+              <a class="tar_download_link" href="https://github.com/synapticloop/sab-spot-comment/raw/master/dist/sab-spot-comment.jar">Download this project as a .jar file</a>
             </section>
         </header>
     </div>
