quick grammar changes

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <h3><a name="getting-up-and-running" class="anchor" href="#getting-up-and-running"><span class="octicon octicon-link"></span></a>Getting up and Running</h3>
 
 <p>
-	You should be up and running in not time at all!
+	You should be up and running in no time at all!
 </p>
 
 <h4>Requirements</h4>
@@ -108,7 +108,7 @@
 <h3><a name="having-troubles" class="anchor" href="#having-troubles"><span class="octicon octicon-link"></span></a>Having troubles?</h3>
 
 <p>
-	Perhaps you want to look at the <a href="/sab-spot-comment/admin/">Administration</a> pages.
+	Perhaps you want to look at the <a href="/sab-spot-comment/admin/">Administration</a> page.
 </p>
 				</section>
 
