--- a/index.html
+++ b/index.html
@@ -153,7 +153,9 @@
     var d=document, g=d.createElement("script"), s=d.getElementsByTagName("script")[0]; g.type="text/javascript";
     g.defer=true; g.async=true; g.src=u+"piwik.js"; s.parentNode.insertBefore(g,s);
   })();
-  <img src="https://piwik.synapticloop.com/piwik.php?idsite=10&amp;rec=1" style="border:0" alt="" />
 </script>
+<noscript>
+  <img src="https://piwik.synapticloop.com/piwik.php?idsite=10&amp;rec=1" style="border:0" alt="" />
+</noscript>
 	</body>
 </html>
