added affiliate links and updated styles

--- a/admin.html
+++ b/admin.html
@@ -21,6 +21,7 @@
 			<div class="inner">
 				<h1>sab-spot-comment</h1>
 				<h2>A <span style="text-decoration: underline;">totally free</span> auto commenter for SabNZBD/Newznab/SpotNAB applications</h2>
+				<h3>(<a href="https://www.usenetjunction.com/scripts/banner.php?a_aid=ssc&a_bid=0b39d1c0&chan=ghssctxh&w=1">If you want a good usenetserver - We recommend UsenetServer</a>)</h3>
 			</div>
 		</header>
 
@@ -111,6 +112,10 @@
 						<li><a href="index.html">home</a></li>
 						<li><a href="admin.html">admin</a></li>
 						<li><a href="admin-more.html">more admin</a></li>
+					</ul>
+					<hr />
+					<ul>
+						<li><a href="https://www.usenetjunction.com/scripts/banner.php?a_aid=ssc&a_bid=0b39d1c0&chan=ghssctxn&w=1">We recommend UsenetServer for the best completion.</a></li>
 					</ul>
 					<hr />
 					<ul><li><a href="https://github.com/synapticloop/sab-spot-comment/issues">issues tracker</a></li></ul>
